# ChainSolve-Web

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OVERNIGHT_TASKS.md  OVERNIGHT_TASKS2.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_LICENCES.md  THIRD_PARTY_NOTICES.md  cs  deny.toml  eslint.config.js  fmt_out.txt  index.html  package-lock.json  package.json  playwright.config.ts  tsc_out.txt  tsconfig.app.json  tsconfig.node.json  typedoc.json  vite-plugin-wasm-reload.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backup.yml  ci.yml  docs.yml  (+5 more)
.storybook/: main.ts  preview.tsx
.wrangler-test/: index.js
crates/chainsolve-block-sdk/: Cargo.toml
crates/chainsolve-block-sdk/src/: lib.rs  wasm_abi.rs
crates/chainsolve-cli/: Cargo.toml
crates/chainsolve-cli/src/: main.rs
crates/chainsolve-py/: Cargo.toml
crates/chainsolve-py/src/: lib.rs
crates/engine-core/: Cargo.toml
crates/engine-core/benches/: engine_benchmarks.rs
crates/engine-core/docs/: katex-header.html
crates/engine-core/proptest-regressions/tests/: proptest_properties.txt
crates/engine-core/src/: acausal.rs  autodiff.rs  autodiff_linsolve.rs  catalog.rs  compensated.rs  cuda.rs  custom_vjp.rs  error.rs  eval.rs  expr.rs  fmu_export.rs  grad_checkpoint.rs  graph.rs  integrate.rs  interpolate.rs  lib.rs  linalg.rs  matfile.rs  neural_operator.rs  ops.rs  parquet.rs  pinn.rs  precision.rs  rng.rs  rootfinding.rs  signal.rs  sparse.rs  sparse_solvers.rs  stl.rs  symbolic.rs  types.rs  units.rs  validate.rs
crates/engine-core/src/ml/: classification_metrics.rs  decision_tree.rs  knn.rs  linreg.rs  metrics.rs  mod.rs  polyreg.rs  preprocess.rs
crates/engine-core/src/nn/: activation.rs  attention.rs  export.rs  layer.rs  lr_schedule.rs  mod.rs  model.rs  onnx_export.rs  recurrent.rs  train.rs
crates/engine-core/src/ode/: adjoint.rs  bdf.rs  dae.rs  event.rs  fem2d.rs  mod.rs  pde1d.rs  radau.rs  rk4.rs  rk45.rs  steady_state.rs  symplectic.rs  types.rs
crates/engine-core/src/optim/: bayesian.rs  cmaes.rs  curve_fit.rs  doe.rs  genetic.rs  gradient.rs  lbfgsb.rs  lp.rs  mod.rs  montecarlo.rs  nsga3.rs  param_est.rs  pareto.rs  qp.rs  response_surface.rs  robust.rs  sensitivity.rs  simplex.rs  sobol_sensitivity.rs  sqp.rs  sweep.rs  topology.rs  trust_region.rs  uq.rs
crates/engine-core/src/tests/: mod.rs  proptest_properties.rs
crates/engine-core/src/vehicle/: aero.rs  events.rs  lap.rs  mod.rs  powertrain.rs  suspension.rs  thermal.rs  tire.rs
crates/engine-core/tests/: canvas_isolation.rs  detest_benchmarks.rs  error_messages.rs  fea_benchmarks.rs  golden.rs  incremental_patch.rs  list_propagation.rs  optim_benchmarks.rs  perf_smoke.rs  properties.rs  stl_matfile_tests.rs  unit_convert.rs
crates/engine-core/tests/fixtures/: arithmetic_chain.fixture.json  basic_add.fixture.json  chain_negate.fixture.json  cycle_detection.fixture.json  disconnected_ports.fixture.json  division_by_zero.fixture.json  engineering_domain_errors.fixture.json  finance_reference.fixture.json  identity_elements.fixture.json  logic_ops.fixture.json  negative_zero_canon.fixture.json  precision_kahan.fixture.json  reference_constants.fixture.json  reference_math.fixture.json  stats_reference.fixture.json  table_broadcast.fixture.json  trig_roundtrip.fixture.json  trig_special_angles.fixture.json  unknown_block.fixture.json  vector_broadcast.fixture.json  vector_ops_suite.fixture.json
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs
docs/: ADMIN_GUIDE.md  AI.md  AI_COPILOT.md  AI_PRIVACY.md  AI_WORKFLOWS.md  ANALYTICS_STRATEGY.md  ARCHITECTURE.md  ASSET_LICENSE_POLICY.md  AUDIT_GUIDE.md  BACKUP_RUNBOOK.md  BLOCK_CATALOG_GOVERNANCE.md  BRANDING.md  CHAINSOLVEJSON_FORMAT.md  CONVENTIONS.md  CSEL.md  DATA_RETENTION.md  DEVCONTAINER.md  DEVELOPMENT.md  ENTERPRISE.md  ENV_SECRETS.md  EXCEL_EXPORT.md  FUNCTION_PACK_STAGING.md  GROUPS.md  INDEX.md  IP_RISK_PROCESS.md  MARKETING_QA.md  OVERNIGHT_TASKS.md  OVERNIGHT_TASKS2.md  PDF_EXPORT.md  PENTEST_CHECKLIST.md  PLOTTING.md  PROJECT_FORMAT.md  README.md  RELEASE.md  REPO_MAP.md  ROADMAP_CHECKLIST.md  SECURITY.md  SEO_HREFLANG.md  SETUP.md  TESTING_GOLDENS.md  (+14 more)
e2e/: a11y.spec.ts  accuracy.spec.ts  auth-flows.spec.ts  billing.spec.ts  canvas-interactions.spec.ts  canvas-smoke.spec.ts  chaos.spec.ts  core-flows.spec.ts  csv-import.spec.ts  export-downloads.spec.ts  groups.spec.ts  helpers.ts  marketplace.spec.ts  multi-canvas.spec.ts  perf-smoke.spec.ts  plot-smoke.spec.ts  project-lifecycle.spec.ts  smoke.spec.ts  variables.spec.ts  visual.spec.ts  wasm-engine.spec.ts  workbench-ux.spec.ts
functions/: tsconfig.json  tsconfig.tsbuildinfo
legal/: asset-licences.md  billing-setup.md  breach-response.md  dpa-references.md  dpa-template.md  dpia-assessment.md  export-control-assessment.md  font-licences.md  frontend-dependency-licences.md  ico-registration.md  ropa.md  rust-dependency-licences.md
perf/: graphGen.ts
public/: _headers  _redirects  robots.txt  site.webmanifest  sitemap.xml  sw.js
scripts/: README.md  check-adapter-boundary.sh  check-bundle-size.mjs  check-bundle-splits.mjs  check-csp-allowlist.mjs  check-i18n-hardcoded.mjs  check-i18n-keys.mjs  check-perf-budget.mjs  check-robots-meta.mjs  check-wasm-exports.mjs  doctor.mjs  gen-legal-pack.sh  gen-rust-licences.mjs  gen-sbom.sh  generate-licenses.mjs  optimize-wasm.mjs  setup.sh  update-i18n-blocks.js  verify-ci.sh  verify-fast.sh
src/: App.tsx  boot.ts  csp.test.ts  index.css  instrument.ts  main.tsx  supabaseMigrations.test.ts  vega-interpreter.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
supabase/: config.toml
test-results/: .last-run.json
(+954 files in other folders)
