[workspace]
resolver = "2"
members = ["crates/*", "src-tauri"]

[workspace.package]
license = "MIT"
repository = "https://github.com/godfrey-engineering/chainsolve"
edition = "2021"

# Size-optimized release profile for WASM builds.
# lto + opt-level "z" + codegen-units 1 produce the smallest binary.
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true

# Desktop (Tauri) release profile — speed over size.
[profile.desktop]
inherits = "release"
opt-level = 3
