[package]
name = "chainsolve-block-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for authoring custom ChainSolve computation blocks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/godfrey-engineering/chainsolve"

[dependencies]
engine-core = { path = "../engine-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
engine-core = { path = "../engine-core" }
