[package]
name = "chainsolve-py"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Python bindings for the ChainSolve engine via PyO3 (10.6)"

[lib]
name = "chainsolve"
# cdylib = Python extension module (.so / .pyd)
# rlib = for Rust tests
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core = { path = "../engine-core" }
pyo3 = { version = "0.22", features = ["abi3-py38"] }
serde_json = "1"

[dev-dependencies]
# pyo3-build-config already pulled transitively

[features]
# Enable the PyO3 extension module (.so/.pyd) for Python distribution.
# Without this feature the crate is a pure Rust library for `cargo test`.
extension-module = ["pyo3/extension-module"]
default = []
