[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
high-precision = ["dashu-float"]
faer = ["dep:faer"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashu-float = { version = "0.4", optional = true }
faer = { version = "0.24.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "engine_benchmarks"
harness = false
