[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "ChainSolve computation engine — pure Rust, compiles to native and WASM"
repository = "https://github.com/godfrey-engineering/chainsolve"
documentation = "https://docs.chainsolve.dev/rust/engine_core"
keywords = ["computation", "wasm", "engineering", "simulation", "solver"]
categories = ["science", "mathematics", "wasm"]

[package.metadata.docs.rs]
# Build all features so every module is documented on docs.rs
all-features = true
# Target docs.rs default (x86_64-unknown-linux-gnu) — WASM target is not needed for docs
targets = []
# Render math in doc comments using KaTeX
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/katex-header.html"]

[features]
default = []
high-precision = ["dashu-float"]
faer = ["dep:faer"]
# Parallel evaluation of independent DAG branches via rayon (1.51).
# Requires SharedArrayBuffer on WASM builds — automatically skipped when
# the target does not support atomics.
parallel = ["dep:rayon"]
# Native CUDA acceleration for server-side execution (1.43).
# NEVER enable on WASM targets — links against libcuda.so.
native-cuda = ["dep:cudarc"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashu-float = { version = "0.4", optional = true }
faer = { version = "0.24.0", default-features = false, features = ["std"], optional = true }
rayon = { version = "1", optional = true }
# cudarc is only usable on native targets with an NVIDIA driver.
# wasm32 targets cannot link libcuda.so — the native-cuda feature ensures
# this dep is excluded from WASM compilation via cfg checks in cuda.rs.
cudarc = { version = "0.19", features = ["cublas"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "engine_benchmarks"
harness = false

[[bin]]
name = "serve"
path = "src/bin/serve.rs"
# Heavy-compute HTTP server for hybrid eval (7.12).
# Build with: cargo build -p engine-core --bin serve --release
