[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine-core = { path = "../engine-core" }
wasm-bindgen = "0.2"
serde_json = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"

# Disable wasm-pack's built-in wasm-opt download.
# We run our own deterministic wasm-opt step via the binaryen npm
# devDependency (scripts/optimize-wasm.mjs) to avoid network downloads in CI.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
